Testsuite/ManualTests/203/203.c.gcov
        -:    0:Source:203.c
        -:    0:Graph:203.gcno
        -:    0:Data:203.gcda
        -:    0:Runs:1
        -:    1:/* Test C11 _Noreturn.  Test _Noreturn on main, hosted.  */
        -:    2:/* { dg-do compile } */
        -:    3:/* { dg-options "-std=c11 -pedantic-errors -fhosted" } */
        -:    4:
        -:    5:_Noreturn void exit(int);
        -:    6:
        1:    7:_Noreturn int main(void) /* { dg-error "'main' declared '_Noreturn'" } */
        -:    8:{
        1:    9:  exit(0);
        -:   10:}
